Revert "fix: make body/html transparent so Safari address bar is invisible"
This reverts commit f2cf7d38b2b5bab78248e701f24242cfbf6b40a5.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -154,7 +154,7 @@ body {
 
 body {
   font-family: 'HKGrotesk', sans-serif;
-  background-color: transparent;
+  background-color: #F2F2F2;
   color: #222831;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
